Criação botões de link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
     </div>
     <div class="content">
-        <h2>Bem-vindo ao Painel Administrativo</h2>
+        <h2 class="content__saudacao">Bem-vindo ao Painel Administrativo</h2>
         <div class="row">
             <div class="col-md-4">
                 <div class="card p-3">
@@ -41,12 +41,23 @@
             </div>
         </div>
         <canvas id="grafico" width="400" height="200"></canvas>
-        <footer class="mt-4">
-            <p>Siga-nos:</p>
-            <a href="#" target="_blank">Facebook</a> |
-            <a href="#" target="_blank">Twitter</a> |
-            <a href="#" target="_blank">Instagram</a>
-        </footer>
+        <div class="apresentacao__conteudo__links">
+
+            <h2 class="apresentacao__conteudo__links__subtitulo">Acesse nossas redes</h2>
+            <a class="links__redes__sociais" href="https://www.instagram.com/">
+                <img src="assets/instagram.png" alt="logo Instagram" class="logo__imagem">
+                Instagram
+            </a>
+            <a class="links__redes__sociais" href="https://facebook.com.br">
+                <img src="assets/facebook.png" alt="Logo Facebook" class="logo__imagem">
+                Facebook
+            </a>
+            <a class="links__redes__sociais" href="https://twitter.com/">
+                <img src="assets/twitter.png" alt="Logo Twitter" class="logo__imagem">
+                Twitter
+            </a>
+            
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
