--- a/configuracoes.html
+++ b/configuracoes.html
@@ -23,7 +23,7 @@
                 <input type="checkbox" id="darkModeToggle">
                 <span class="slider round"></span>
             </label>
-            <span>Modo Escuro</span>
+            <span class="dark__mode__text">Modo Escuro</span>
         </div>
     </div>
     <script src="script.js"></script>
