Adicionando a aba de agendamentos

--- a/configuracoes.html
+++ b/configuracoes.html
@@ -12,7 +12,7 @@
         <h4 class="text-center">Clínica Médica</h4>
         <a href="index.html">Dashboard</a>
         <a href="pacientes.html">Pacientes</a>
-        <a href="#">Agendamentos</a>
+        <a href="agendamentos.html">Agendamentos</a>
         <a href="#">Relatórios</a>
         <a href="configuracoes.html">Configurações</a>
     </div>
