--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="index.html">Dashboard</a>
         <a href="pacientes.html">Pacientes</a>
         <a href="agendamentos.html">Agendamentos</a>
-        <a href="#">Relatórios</a>
+        <a href="relatorios.html">Relatórios</a>
         <a href="configuracoes.html">Configurações</a>
         
     </div>
